feature: add pool metadata
